Add Entity Configurations in Entity projcet

--- a/Kuk.Entities/Kuk.Entities.csproj
+++ b/Kuk.Entities/Kuk.Entities.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
+  </ItemGroup>
+
 </Project>
