add Db Model Repositories into Data Project & Add Assert file (for check not null and not empty Class model in CRUD opration)

--- a/Kuk.Data/Kuk.Data.csproj
+++ b/Kuk.Data/Kuk.Data.csproj
@@ -7,9 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="NewFolder\**" />
-    <EmbeddedResource Remove="NewFolder\**" />
-    <None Remove="NewFolder\**" />
+    <PackageReference Include="Autofac" Version="6.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Kuk.Common\Kuk.Common.csproj" />
+    <ProjectReference Include="..\Kuk.Entities\Kuk.Entities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configuration\" />
   </ItemGroup>
 
 </Project>
