--- a/Kuk.Common/Kuk - Backup.Common.csproj
+++ b/Kuk.Common/Kuk - Backup.Common.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Enums\" />
-    <Folder Include="Messages\" />
+    <Folder Include="Utilities\" />
   </ItemGroup>
 
 </Project>
