add Note Service Interfaces & Messaging model & ViewModels into Note Service & / Request and Response Base into Common project

--- a/Kuk.Services/Kuk.Services.csproj
+++ b/Kuk.Services/Kuk.Services.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Configuration\" />
+    <Folder Include="Services\Note\Validation\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Kuk.Common\Kuk.Common.csproj" />
+    <ProjectReference Include="..\Kuk.Data\Kuk.Data.csproj" />
+  </ItemGroup>
+
 </Project>
