--- a/Kuk.Services/Kuk.Services.csproj
+++ b/Kuk.Services/Kuk.Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Configuration\" />
+    <Folder Include="Common\" />
     <Folder Include="Services\Note\Validation\" />
   </ItemGroup>
 
