--- a/Kuk.UnitTests/Kuk.UnitTests.csproj
+++ b/Kuk.UnitTests/Kuk.UnitTests.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.7" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Kuk.Common\Kuk.Common.csproj" />
+    <ProjectReference Include="..\Kuk.Services\Kuk.Services.csproj" />
+  </ItemGroup>
+
 </Project>
