change SQL connection string

--- a/Kuk.WebApi/appsettings.json
+++ b/Kuk.WebApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "WebApiDatabase": "Data Source=.; Initial Catalog=KukCodeChallenge; User Id=sa; Password=123456"
+    "WebApiDatabase": "Server=.;Database=KukCodeChallenge;Trusted_Connection=True;"
+    //"WebApiDatabase": "Data Source=.; Initial Catalog=KukCodeChallenge; User Id=sa; Password=123456"
   },
   "Logging": {
     "LogLevel": {
